initial responsive design

--- a/style.css
+++ b/style.css
@@ -18,12 +18,14 @@
 }
 
 body,
-.main-nav-company-logo {
+.main-nav-company-logo,
+section {
   box-sizing: border-box;
   margin: 0;
 }
 
 button {
+ padding: 0;
  cursor: pointer;
  background-color: transparent;
  border-style: none;
@@ -39,6 +41,7 @@ button {
 }
 
 body {
+ position: relative;
  font-family: var(--ff);
  font-size: var(--fs);
  font-weight: var(--fw-regular);
@@ -51,7 +54,9 @@ body {
 }
 
 header {
-  background-color: black;
+ position: absolute;
+ top: 0;
+ left: 0;
   width: 100%;
 }
 
@@ -73,10 +78,120 @@ header {
   border-radius: 1px;
 }
 
+.background-container {
+ background-image: url(images/image-hero-mobile.jpg);
+ background-size: contain;
+ background-repeat: no-repeat;
+ height: 0;
+ width: 100%;
+ padding-top: 85.7%; 
+ /* (img-height / img-width * container-width) */
+                /* (853 / 1280 * 100) */
+                /* https://stackoverflow.com/questions/600743/how-to-get-div-height-to-auto-adjust-to-background-size */
+
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
 section {
  width: 90%;
+ padding: 2rem 1.5rem;
  background-color: white;
  border: 1px solid var(--gray-dark-50);
+ border-radius: 10px;
+
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ gap: 1rem;
+}
+
+section > * {
+ margin: 0;
+}
+
+.introduction-section {
+ margin-top: -5rem;
+ text-align: center;
+}
+
+.introduction-section-product-logo {
+ margin-top: -60px; /* half-height + parents padding */
+}
+
+.introduction-section-product-name {
+ width: 80%;
+}
+
+.introduction-section-product-description {
+ font-size: .9rem;
+ line-height: 1.4rem;
+ color: var(--gray-dark);
+}
+
+.introduction-section-buttons {
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ align-items: center;
+ gap: .5rem;
+ width: 100%;
+}
+
+.introduction-section-buttons .back-this-project {
+ color: white;
+ background-color: var(--cyan-moderate);
+ font-family: inherit;
+ font-weight: var(--fw-medium);
+ font-size: 1rem;
+ line-height: 2rem;
+ height: 56px;
+ width: 223.5px;
+ border-radius: 28px;
+}
+
+@media screen and (min-width: 647px) {
+ .background-container {
+  background-image: url(images/image-hero-desktop.jpg);
+ height: 0;
+ width: 100%;
+ padding-top: 27.7%; 
+ }
+ section {
+  width: 85%;
+ }
+ .introduction-section {
+  margin-top: -2rem;
+ }
+}
+
+@media screen and (min-width: 888px) {
+ section {
+  width: 80%;
+ }
+ .introduction-section {
+  margin-top: -3rem;
+ }
+}
+
+@media screen and (min-width: 952px) {
+ section {
+  width: 65%;
+ }
+ .introduction-section {
+  margin-top: -4rem;
+ }
+}
+
+@media screen and (min-width: 1336px) {
+ section {
+  width: 50%;
+ }
+ .introduction-section {
+  margin-top: -5rem;
+ }
 }
 
 .attribution {
