--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ section > * {
 }
 
 .introduction-section {
-  margin-top: -5rem;
+  margin-top: -6rem;
 }
 
 .introduction-section-product-logo {
@@ -135,6 +135,7 @@ section > * {
 
 .introduction-section-product-name {
   width: 80%;
+  font-size: 1.25rem;
 }
 
 .introduction-section-product-description {
@@ -144,7 +145,7 @@ section > * {
 }
 
 .introduction-section-buttons {
-  margin-top: 1rem;
+  margin-top: .5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -165,8 +166,55 @@ section > * {
   background-color: transparent;
 }
 
+.stats-section {
+  gap: 0;
+}
+
+.stat {
+  padding-bottom: 2rem;
+}
+
+.stat:not(:first-child) {
+  padding-top: 2rem;
+}
+
+.stat > * {
+  margin: 0;
+  line-height: 1;
+}
+
+.stat h2{
+  font-size: 2rem;
+}
+
+.stat p {
+  margin-top: .75rem;
+  font-size: .9rem;
+  color: var(--gray-dark);
+}
+
+.stats-section .progress {
+  width: 100%;
+  height: .75rem;
+  background-color: var(--gray-light);
+  border-radius: 10px;
+}
+
+.progress-bar {
+  height: 100%;
+  width: 80%;
+  background-color: var(--cyan-moderate);
+  border-radius: 10px;
+}
+
+.stat.total-backers {
+  border-top: 1px solid var(--gray-dark-50);
+  border-bottom: 1px solid var(--gray-dark-50)
+}
+
 .about-section {
   align-items: flex-start;
+  gap: 1.5rem;
 }
 
 .about-section-card {
@@ -177,6 +225,16 @@ section > * {
   justify-content: center;
   align-items: flex-start;
   gap: 1.5rem;
+}
+
+.about-section-header {
+  font-size: 1.25rem;
+}
+
+.about-section-description {
+  color: var(--gray-dark);
+  font-size: .9rem;
+  line-height: 1.4rem;
 }
 
 .about-section-card-headers {
