--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ p {
 
 .main-nav-links,
 .bookmark-this.desktop,
-.modal {
+.modal,
+.modal-content-pledge-container {
   display: none;
 }
 
@@ -350,17 +351,35 @@ section > * {
   height: 15px;
 }
 
+.modal-content-description {
+  width: 100%;
+}
+
 .modal-content-description,
 .modal-content-card-description {
   font-size: .9rem;
   line-height: 1.5rem;
 }
 
-.modal-content-card {
+.modal-content-card-container {
+  padding: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0
+}
+
+.modal-content-card {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
   align-items: flex-start;
+}
+
+.selected-card {
+  border: 2px solid var(--cyan-moderate);
 }
 
 .modal-content-card-headers {
@@ -387,10 +406,87 @@ section > * {
   height: 15px;
 }
 
+.modal-content-card-count {
+  margin: 0;
+}
+
 .modal-content-card-count span {
   font-size: 1.25rem;
 }
 
+.modal-content-pledge-container {
+  width: 100%;
+}
+
+.modal-content-pledge {
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-top: 1px solid var(--gray-dark);
+  gap: 1rem;
+}
+
+.modal-content-pledge-header {
+  margin: 0;
+}
+
+.modal-content-pledge > * {
+  font-size: .9rem;
+}
+
+.pledge-form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: .75rem;
+  width: 100%;
+}
+
+.pledge-form-container > * {
+  font-size: .9rem;
+}
+
+.pledge-submit {
+  height: 3rem;
+  width: 7.5rem;
+  border-radius: 3.75rem;
+}
+
+.pledge-input-container {
+  border: 1px solid var(--gray-dark-50);
+  border-radius: 50px;
+  width: 80px;
+  padding: .75rem;
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.pledge-input-container > *{
+  font-size: inherit;
+  font-weight: var(--fw-bold);
+}
+
+.pledge-input {
+  font-family: var(--ff);
+  width: 4ch;
+  border-style: none;
+  outline: none;
+}
+
+.pledge-input-container::before {
+  content: "$";
+  color: var(--gray-dark);
+  font-weight: var(--fw-bold);
+  opacity: 50%;
+  margin-right: .25rem;
+}
 
 @media screen and (min-width: 647px) {
   .background-container {
