--- a/style.css
+++ b/style.css
@@ -423,6 +423,14 @@ section > * {
   margin: 0;
 }
 
+.modal-content-card-headers .primary {
+  cursor: pointer;
+}
+
+.primary:hover {
+  color: var(--cyan-moderate);
+}
+
 .modal-content-card-select {
   height: 15px;
 }
