--- a/style.css
+++ b/style.css
@@ -466,6 +466,7 @@ section > * {
 }
 
 .pledge-form-container {
+  margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -540,6 +541,21 @@ section > * {
   }
   .introduction-section {
     margin-top: -2rem;
+  }
+  .modal-content-pledge {
+    flex-direction: row;
+  }
+  .modal-content-pledge > * {
+    flex: 1;
+  }
+
+  .pledge-form-container {
+    margin: 0 1rem;
+    justify-content: flex-end;
+  }
+
+  .modal-content-pledge-header {
+    margin: 0 1rem;
   }
 }
 
