--- a/style.css
+++ b/style.css
@@ -56,6 +56,16 @@ p {
   display: none;
 }
 
+.main-nav-links {
+  margin-left: auto;
+  list-style: none;
+}
+
+.main-nav-links a {
+  text-decoration: none;
+  color: var(--gray-light);
+}
+
 body {
   position: relative;
   font-family: var(--ff);
@@ -68,14 +78,15 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 0 5rem 5rem;
 }
 
 .main-header {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90%;
 }
 
 .main-nav {
@@ -85,6 +96,7 @@ body {
 }
 
 .main-nav-button {
+  display: block;
   margin-left: auto;
   background-color: transparent;
 }
@@ -100,9 +112,21 @@ body {
   /* (853 / 1280 * 100) */
   /* https://stackoverflow.com/questions/600743/how-to-get-div-height-to-auto-adjust-to-background-size */
 
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: -2;
+}
+
+.background-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(hsla(0,0%,0%,75%), hsla(0,0%,0%,0%), hsla(0,0%,0%,0%));
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 section {
@@ -573,6 +597,7 @@ section > * {
 }
 
 @media screen and (min-width: 647px) {
+
   .background-container {
     background-image: url(images/image-hero-desktop.jpg);
     height: 0;
@@ -580,12 +605,19 @@ section > * {
     padding-top: 27.8%;
   }
 
+  .main-nav-button {
+    display: none;
+  }
+
+  .main-nav-links {
+    display: flex;
+    gap: 1rem;
+  }
+
   .introduction-section-buttons .bookmark-this-container {
     background-color: var(--gray-dark-25);
     padding-right: 1.5rem;
   }
-
-  
 
   .bookmark-text {
     display: block;
